feat(add):assets

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 	<video width="640" height="360" controls autoplay loop>
-		<source src="http://email.rogersclientsolutions.com/sparkar/assets/sn-player-vladdy.mp4?autoplay=1" type="video/mp4"></source>
+		<source src="https://smartnal.github.io/spark-ar-lab/assets/sn-player-vladdy.mp4" type="video/mp4"></source>
 	</video>
 </body>
 
